# ai4games

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
cmake/: get_cpm.cmake
src/: CMakeLists.txt
src/bt/: CMakeLists.txt  README.md  bt.h  main.cpp  tests.cpp
src/bt/tests/: 01_no_items_wander.in  01_no_items_wander.out  02_steal_items.in  02_steal_items.out  03_guard_nearby_hide.in  03_guard_nearby_hide.out  04_guard_distance_changes.in  04_guard_distance_changes.out  05_items_appear.in  05_items_appear.out
src/flocking/: CMakeLists.txt  flocking.hpp  main.cpp  tests.cpp  vector2.hpp
src/flocking/tests/: alignment_separation.out  alignment_separation_five_boids.out  cohesion_alignment_separation.out  cohesion_three_boids.out  combined_all_behaviors.out  large_simulation.out  max_force_clamping.in  max_force_clamping.out  multiple_steps_alignment.in  multiple_steps_alignment.out  multiple_steps_cohesion.in  multiple_steps_cohesion.out  multiple_steps_combined.out  multiple_steps_high_values.out  multiple_steps_separation.in  multiple_steps_separation.out  separation_multiple_steps.out  separation_only.in  separation_only.out
src/fsm/: CMakeLists.txt  README.md  fsm.h  main.cpp  tests.cpp
src/fsm/tests/: 01_simple_transitions.in  01_simple_transitions.out  02_invalid_command.in  02_invalid_command.out  03_start_alert.in  03_start_alert.out  04_start_combat.in  04_start_combat.out  05_multiple_invalid.in  05_multiple_invalid.out  06_no_commands.out  07_back_and_forth.in  07_back_and_forth.out  08_combat_invalid.in  08_combat_invalid.out  09_unknown_commands.in  09_unknown_commands.out  10_long_sequence.in  10_long_sequence.out
src/lib/: MemoryLeakDetector.cpp  MemoryLeakDetector.h
src/life/: CMakeLists.txt  life.hpp  main.cpp  tests.cpp
src/maze/: CMakeLists.txt  maze.cpp  maze.hpp  tests.cpp
src/rng/: CMakeLists.txt  README.md  random.h  tests.cpp
src/utility/: CMakeLists.txt  README.md  main.cpp  tests.cpp  utility.h
src/utility/tests/: 01_full_energy_explore.in  01_full_energy_explore.out  02_low_energy_sleep.in  02_low_energy_sleep.out  03_hungry_eat.in  03_hungry_eat.out  04_low_health_rest.in  04_low_health_rest.out  05_changing_needs.in  05_changing_needs.out
